20-12-05    Added missing path vars in config template (Tomasz Osmialowski)
20-12-05    Fixed corruption of german language file in default module
19-12-05    Fixed incorrect constant which prevented instant messages from working
            correctly
16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)

IMPROVEMENTS
05-01-06    All data object calls are now config driven (freeslacker)
05-01-06    Added a new admin GUI, admin tasks will be clearly defined and
            identified by this addition (Julien Casanova)
04-01-06    Blocks can now be enabled/disabled for sub-sections (mstahv)
04-01-06    Cleanup of Translation2 implementation, navigation section and items
            get their own translation id, no more sharing with titles.  section
            and item_addition both get a new trans_id field (AJ Tarachanowicz)
23-12-05    Added new navigation block (AJ Tarachanowicz)
22-12-05    PEAR's Translation2 lib integrated which means application interface,
            navigation and content can now be translated into multiple languages,
            many thanks to AJ's gargantuan effort here and the patronage of
            Multithink.com (AJ Tarachanowicz)
22-12-05    Improvement to the who's online block (Andrey Podshivalov)


+-----------------------+
| VERSION: 0.5.4        |
+-----------------------+
BUGFIXES
24-11-05    Fixed long-standing image preview header probs
24-11-05    Fixed config prob with FCK, images now upload correctly

IMPROVEMENTS
14-12-05    Module skeleton generator improved, it now: creates template files,
            lang files and aActionsMapping array (Werner Krauss)
14-12-05    Added SGL::loadRegionList for loading localised country/state arrays
            (Philippe Lhoste)
14-12-05    'localeCategory' configurable, set to LC_ALL by default although European
            users will want to change this where supplying a , for the decimal separator
            causes calculation probs (use LC_TIME)