@@ -7,6 +7,7 @@ port                    = 3306
 user                    = root
 pass                    =
 name                    = seagull
+post-connect            =
 
 [site]
 sessionMaxLifetime      = 0 ; until the browser is closed
