@@ -586,6 +586,18 @@
         <td>&nbsp;</td>
     </tr>
     <tr>
+        <td class="fieldName">{translate(#Post-connection query#)}</td>
+        <td class="fieldValue">
+            <input type="text" name="conf[db][post-connect]" value="{conf[cache][post-connect]}" size="50" />
+        </td>
+        <td>
+            <span class="tipOwner">
+                <img src="{webRoot}/themes/{theme}/images/info.gif" alt="info" />
+                <span class="tipText">{translate(#This query is used to set the default character set for the current connection (MySQL 4.1 or higher). For example: SET NAMES utf8#)}</span>
+            </span>
+        </td>
+    </tr>
+    <tr>
         <td colspan="3" align="center">&nbsp;</td>
     </tr>
     <tr>
